--- a/dictateningprov2/app/src/main/AndroidManifest.xml
+++ b/dictateningprov2/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="Dictatenting Pro"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +25,7 @@
 
         <activity
             android:name=".FilesActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity"
             android:label="Choose a file">
 
