--- a/dictateningprov2/app/src/main/AndroidManifest.xml
+++ b/dictateningprov2/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vdroid.dictateningprov2">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -22,14 +23,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".FilesActivity"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity"
-            android:label="Choose a file">
+            android:parentActivityName=".StorageActivity"
+            android:label="Choose a file"
+            android:screenOrientation="portrait">
 
         </activity>
+
+        <activity android:name=".StorageActivity"
+                android:label="Choose a storage"
+                android:parentActivityName=".MainActivity"
+                android:screenOrientation="portrait">
+        </activity>
+
     </application>
 
 </manifest>
