--- a/dictateningprov2/app/src/main/AndroidManifest.xml
+++ b/dictateningprov2/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:label="Dictatenting Pro"
             android:configChanges="orientation"
             android:windowSoftInputMode="adjustPan"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
