--- a/dictateningprov2/app/src/main/AndroidManifest.xml
+++ b/dictateningprov2/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="EngSkill Booster: Listening Dictation"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -35,7 +35,7 @@
         </activity>
 
         <activity android:name=".SaveFileActivity"
-            android:label="Choose a storage"
+            android:label="Save File"
             android:configChanges="orientation"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
